T926 amend WSL install evidence